public class Parameters
{
    public const string state = "State";
    public const string explode = "Explode";
    public const string deploy = "Deploy";
    public const string die = "Die";
    public const string attack = "Attack";
    public const string endAttack = "EndAttack";
    public const string charge = "Charge";
}
