public class Parameters
{
    public const string state = "State";
    public const string explode = "Explode";
    public const string deploy = "Deploy";
    public const string die = "Die";
    public const string attack = "Attack";
    public const string endAttack = "EndAttack";
    public const string charge = "Charge";
    public const string showButton = "ShowButton";
    public const string hideButton = "HideButton";
    public const string openDoor = "Open Door";
    public const string closeDoor = "Close Door";
    public const string prepareAttack = "Prepare Attack";
}
